<resources>
    <string name="app_name">DandM</string>
    <string name="email_mobile_number">Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Login</string>
    <string name="join_us">Register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="takephoto">Take Photo</string>
    <string name="checkin">Check In</string>
</resources>