<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    android:padding="10dp"

    tools:context=".Register">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create a New Account"
        android:layout_marginTop="20sp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="There are many variations of passages of Lorem Ipsum available"
        android:gravity="center"
        android:textStyle="normal"
        android:textColor="@color/primary"
        android:textSize="18sp"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="30dp"
        android:backgroundTint="#F7F7F7"
        app:cardCornerRadius="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_margin="12dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30sp"
            android:hint="@string/email"
            android:background="@null"/>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="30dp"
        android:backgroundTint="#F7F7F7"
        app:cardCornerRadius="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_margin="12dp"
            android:inputType="textPassword"
            android:layout_marginTop="30sp"
            android:hint="@string/password"
            android:background="@null"/>

    </com.google.android.material.card.MaterialCardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">


        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree with the "/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms of Service &amp; Privacy Policy."
            android:textColor="@color/primary"/>


    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have acc?"
            android:textSize="16sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_login"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>