<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="Welcome Back"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="There are many variation of passages"
        android:textSize="18sp"
        android:textStyle="normal" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="30dp"
        android:backgroundTint="#F7F7F7"
        app:cardCornerRadius="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_margin="12dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30sp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:background="@null"/>

    </com.google.android.material.card.MaterialCardView>




    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:backgroundTint="#F7F7F7"
        app:cardCornerRadius="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_margin="12dp"
            android:inputType="textPassword"
            android:layout_marginTop="30sp"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:background="@null"/>

    </com.google.android.material.card.MaterialCardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:backgroundTint="@color/primary"
        android:id="@+id/btn_login"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="10dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:gravity="center_horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/registerNow"
            android:layout_height="wrap_content"
            android:text="@string/join_us"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>